--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,10 +4,23 @@
 
 [buildout]
 parts = scripts
-develop = .
 eggs = xbob.example
-newest = false
+develop = src/xbob.extension
+          src/xbob.blitz
+          .
+extensions = xbob.buildout
+             mr.developer
+auto-checkout = *
+
+; options for xbob.buildout extension
+debug = true
+verbose = true
+prefixes = /idiap/group/torch5spro/nightlies/last/bob/linux-x86_64-release
+           /Users/andre/work/bob/b/dbg/
+
+[sources]
+xbob.extension = git git@github.com:bioidiap/xbob.extension branch=prototype
+xbob.blitz = git git@github.com:bioidiap/xbob.blitz
 
 [scripts]
 recipe = xbob.buildout:scripts
-dependent-scripts = true
