--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,10 +13,8 @@ extensions = xbob.buildout
 auto-checkout = *
 
 ; options for xbob.buildout extension
-debug = true
-verbose = true
-prefixes = /idiap/group/torch5spro/nightlies/last/bob/linux-x86_64-release
-           /Users/andre/work/bob/b/dbg/
+;debug = true
+;verbose = true
 
 [sources]
 xbob.extension = git git@github.com:bioidiap/xbob.extension branch=prototype
